# advent-of-code

./: .gitignore  .pre-commit-config.yaml  .sourcery.yaml  Day01.cs  Day03.cs  Day1.cs  Program.cs  README.md  advent-of-code-2020.csproj  advent-of-code.sln  pyproject.toml  setup.sh
2015/python/: Day01.py  Day02.py  Day03.py  Day04.py  Day05.py  Day06.py  Day06b.py  Day07.py  Day1.py  Day19.py  Day2.py  Day3.py  Day4.py  Day5.py  Day6.py  Day6b.py  Day7.py
2016/python/: Day01.py  Day02.py  Day03.py  Day04.py  Day05.py  Day06.py  Day07.py  Day08.py  Day09.py
2017/python/: Day03.py  Day12.py
2019/: .gitattributes
2019/python/: Day01.py  Day02.py  Day03.py  Day04.py  Day18.py  aoc_utils.py  base.py
2020/csharp/: .gitignore  CustomBaseDay.cs  Day01.cs  Day04.cs  Day05.cs  advent-of-code-2020.csproj
2020/python/: Day01.py  Day02.py  Day03.py  Day04.py  Day05.py  Day06.py  Day07-a.py  Day07-b.py  Day08.py  Day09.py  Day10.py  Day11.py  Day11a.py  Day12.py  Day12a.py  Day13.py  Day14.py  Day14a.py  Day15.py  Day15a.py  Day16.py  Day17.py  Day18.py  Day19.py  Day20v3.py  Day21.py  base.py  (+6 more)
advent-of-code-2019/: Program.cs  advent-of-code-2019.csproj
advent-of-code-2020/: Day02.cs  Day04.cs  Day05.cs  Day06.cs  advent-of-code-2020.csproj
csharp/: Day02.cs  Day03.cs  Day04.cs  Day06.cs
python/: Day03.py  Day04.py  Day07-a.py  Day07-b.py  Day08-b.py  Day08.py  Day09.py  Day10.py  Day11.py  Day11a.py  Day13.py  Day14.py  Day16.py  Day17.py  Day17a.py  Day18.py  Day19.py  Day23b.py  Day24.py  aoc_utils.py  base.py  setup.sh
scripts/: daily_leaderboard.py  setup.sh
(+75 files in other folders)
