[project]
name = "advent-of-code"
version = "0.1.0"
description = "My solutions to the Advent of Code challenge"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aoc-utils",
    "more-itertools>=10.5.0",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "parse>=1.20.2",
    "pre-commit>=4.0.1",
    "ruff>=0.8.1",
    "sortedcontainers>=2.4.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
aoc-utils = { path = "common/python" }

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "TID", "C4", "RUF"]
preview = true
